--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".ThirdActivity">
         </activity>
+        <activity android:name=".FourthActivity">
+        </activity>
     </application>
 
 </manifest>
